added stylerules to coffee page

--- a/cafe.html
+++ b/cafe.html
@@ -30,14 +30,12 @@
             <h1 class="welcome">Welcome to our coffee club</h1>
         </section>
 
-    <div class="opening-hours">
+    <div class="main-text">
         <h2>We're open for you:</h2>
         <ul>
             <li>Monday-Friday 09:00-16:00</li>
             <li>Saturday-Sunday 11:00-15:00</li>
         </ul>
-    </div>
-    <div class="menu">
         <h2>Menu:</h2>
         <ul>
             <li>
@@ -49,9 +47,7 @@
                 <li>Caffe Latte €4</li>
                 <li>Lemonade €2.5</li>
         </ul>
-    </div>
-<section> 
-    <body>
+
         <h1>Most things begins and ends with coffee, so even cycling</h1>
         <br>    
         <h2>Wether you love cycling or not, you'll find your place in our café
@@ -62,7 +58,6 @@
         <br>
         Welcome in, wether you're sweaty or nice and tidy, we would love to see you!
         </h2>
-        <id class="latte-art barista-latte"></id>
 
         </p>
     </body>
