--- a/event-calender.html
+++ b/event-calender.html
@@ -28,8 +28,8 @@
         <h1 class="welcome">Join our events</h1>
     </section>
 
-    <h1>2022 Event Schedule</h1>
-
+    <div class="main-text">
+    <h3>2022 Event Schedule</h3>
     <li>Event 1</li>
     <p>St Pauli, January 2:nd</p>
     <li>Event 2</li>
@@ -38,7 +38,7 @@
     <p>Ribbersborgsstranden, June 17th</p>
     <li>Event 4</li>     
     <p>Ystad Saltsjöbad, September 1:st</p>
-
+    </article>
 
     <div>
         <footer class="bg-dark-1">
