--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
     </section>
 
 
-    <nav>
+    <div class="main-text">
         <p>
             From us you start your bike ride after a nice coffee, or join us to watch the Tour over a cappucino. 
             <br>
@@ -37,7 +37,7 @@
             <br>
             Let us help you with some new inspirational routes, or just give you some energy for your ride with a freshly baked pastry!
         </p>
-    </nav>
+    </div>
    
 
 
