added styles and text to cafe and events

--- a/cafe.html
+++ b/cafe.html
@@ -31,14 +31,18 @@
         </section>
 
     <div class="main-text">
+     <h1>Most things begins and ends with coffee, so does cycling</h1>
+        <br>
+        <h2>Come on in for a nice cup of coffee before or after your ride.</h2>
+        <br>
         <h2>We're open for you:</h2>
         <ul>
             <li>Monday-Friday 09:00-16:00</li>
             <li>Saturday-Sunday 11:00-15:00</li>
         </ul>
+        <br>
         <h2>Menu:</h2>
         <ul>
-            <li>
                 <li>Espresso €3</li>
                 <li>Macchiato €3.5</li>
                 <li>Cortado €3.5</li>
@@ -47,19 +51,6 @@
                 <li>Caffe Latte €4</li>
                 <li>Lemonade €2.5</li>
         </ul>
-
-        <h1>Most things begins and ends with coffee, so even cycling</h1>
-        <br>    
-        <h2>Wether you love cycling or not, you'll find your place in our café
-        <br>
-        We have only the best beans from a local roastery here in Malmö to serve you fresh coffee with locally produced milk. 
-        <br>
-        We also have a small selection of pastries from the bakery down the road. 
-        <br>
-        Welcome in, wether you're sweaty or nice and tidy, we would love to see you!
-        </h2>
-
-        </p>
     </body>
 </section>
 
