--- a/event-calender.html
+++ b/event-calender.html
@@ -29,17 +29,23 @@
     </section>
 
     <div class="main-text">
-    <h3>2022 Event Schedule</h3>
-    <li>Event 1</li>
-    <p>St Pauli, January 2:nd</p>
-    <li>Event 2</li>
-    <p>Regnbågsbanan, March 14:th</p>
-    <li>Event 3</li>
-    <p>Ribbersborgsstranden, June 17th</p>
-    <li>Event 4</li>     
-    <p>Ystad Saltsjöbad, September 1:st</p>
-    </article>
-
+        <h1>Join on of our events this year:</h1>
+           <br>
+           <h2>We have events for both road and gravel, check them out:</h2>
+           <br>
+           <h2>Road</h2>
+           <ul>
+               <li>July 16th</li>
+               <li>September 10th</li>
+           </ul>
+           <br>
+           <h2>Gravel</h2>
+           <ul>
+                   <li>July 2nd</li>
+                   <li>August 13th</li>
+                   <li>September 17th</li>
+                   <li>October 8th</li>
+           </ul>
     <div>
         <footer class="bg-dark-1">
             <section id="footer" class="py-5">
