added styles to columns

--- a/cafe.html
+++ b/cafe.html
@@ -30,29 +30,33 @@
             <h1 class="welcome">Welcome to our coffee club</h1>
         </section>
 
-    <div class="main-text">
-     <h1>Most things begins and ends with coffee, so does cycling</h1>
-        <br>
-        <h2>Come on in for a nice cup of coffee before or after your ride.</h2>
-        <br>
-        <h2>We're open for you:</h2>
-        <ul>
-            <li>Monday-Friday 09:00-16:00</li>
-            <li>Saturday-Sunday 11:00-15:00</li>
-        </ul>
-        <br>
-        <h2>Menu:</h2>
-        <ul>
-                <li>Espresso €3</li>
-                <li>Macchiato €3.5</li>
-                <li>Cortado €3.5</li>
-                <li>Cappucino €3</li>
-                <li>Cold brew €3</li>
-                <li>Caffe Latte €4</li>
-                <li>Lemonade €2.5</li>
-        </ul>
-    </body>
-</section>
+    <div class="row">
+        <div class="column">    
+            <h1>Most things begins and ends with coffee, so does cycling</h1>
+            <br>
+            <h2>Come on in for a nice cup of coffee before or after your ride.</h2>
+            <br>
+         
+        </div>
+        <div class="column">
+
+            <h2>We're open for you:</h2>
+            <ul>
+                <li>Monday-Friday 09:00-16:00</li>
+                <li>Saturday-Sunday 11:00-15:00</li>
+            </ul>
+            <h2>Menu:</h2>
+            <ul>
+                    <li>Espresso €3</li>
+                    <li>Macchiato €3.5</li>
+                    <li>Cortado €3.5</li>
+                    <li>Cappucino €3</li>
+                    <li>Cold brew €3</li>
+                    <li>Caffe Latte €4</li>
+                    <li>Lemonade €2.5</li>
+            </ul>
+        </div>
+    </div>
 
     <div>
         <footer class="bg-dark-1">
