--- a/event-calender.html
+++ b/event-calender.html
@@ -19,7 +19,7 @@
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
                 <a href="event-calender.html">Events</a>
-                <a href="contact.html">Contac
+                <a href="contact.html">Contact</a>
             </nav>
         </header>
     </div>
