added columns on cafe and events page

--- a/cafe.html
+++ b/cafe.html
@@ -36,6 +36,9 @@
             <br>
             <h2>Come on in for a nice cup of coffee before or after your ride.</h2>
             <br>
+            <h2>We also serve pastries from the bakery down the road</h2>
+            <br>
+            <h2>So pop by before or after your ride for a lovely treat!</h2>
          
         </div>
         <div class="column">
@@ -44,6 +47,7 @@
             <ul>
                 <li>Monday-Friday 09:00-16:00</li>
                 <li>Saturday-Sunday 11:00-15:00</li>
+                <br>
             </ul>
             <h2>Menu:</h2>
             <ul>
