--- a/event-calender.html
+++ b/event-calender.html
@@ -28,24 +28,34 @@
         <h1 class="welcome">Join our events</h1>
     </section>
 
-    <div class="main-text">
-        <h1>Join on of our events this year:</h1>
-           <br>
-           <h2>We have events for both road and gravel, check them out:</h2>
-           <br>
-           <h2>Road</h2>
-           <ul>
-               <li>July 16th</li>
-               <li>September 10th</li>
-           </ul>
-           <br>
-           <h2>Gravel</h2>
-           <ul>
-                   <li>July 2nd</li>
-                   <li>August 13th</li>
-                   <li>September 17th</li>
-                   <li>October 8th</li>
-           </ul>
+    <div class="row">
+        <div class="column">    
+            <h1>Join one of our events this year:</h1>
+            <br>
+            <h2>We have events for both gravel and road, check them out!</h2>
+    </div>
+
+    <div class="row">
+        <div class="column">    
+            <h1>Road</h1>
+            <br>
+            <h2>July 16th</h2>
+            <br>
+            <h2>August 22nd</h2>
+            <br>
+            <h2>September 10th</h2>
+            <br>
+            <h1>Gravel</h1>
+            <br>
+            <h2>July 2nd</h2>
+            <br>
+            <h2>August 13th</h2>
+            <br>
+            <h2>September 17th</h2>
+            <br>
+            <h2>October 8th</h2>
+    </div>
+
     <div>
         <footer class="bg-dark-1">
             <section id="footer" class="py-5">
