added text to home page

--- a/index.html
+++ b/index.html
@@ -34,16 +34,18 @@
 
     <div class="row">
         <div class="column">  
-            <h2>This is us</h2>  
-            <p>Start your bike ride from our café, after a nice latte or some quick adjustments on your bike.</p>
-            <p>We run this café with the intention of gathering all Malmö cyclists, with the same passion for good coffee.</p>
-            <p>Let us inspire you with some new routes</p>
+            <h1>Cycling</h1>  
+            <p>Cycling is the best we know!</p>
+            <p>Cycling creates meetings - and friends for life. It gives you energyand happiness.</p>
+            <p>Cycling saves a bad day and makes a good day even better.</p>
+            <p>Ride as much or as little, as long or as short as you feel, but ride!</p>
         </div>
         <div class="column">
-                <h2>What we do</h2>
-                <p>We are bike enthusiasts for both roadcycling and gravel</p>
-                <p>We want this to be the local spot for all cyclists, road and gravel riders.</p>
-                <p>Our coffee is roasted locally with a lot of love from local brewery</p>
+                <h1>This is us</h1>
+                <p>We are bike enthusiasts for both roadcycling and gravel.</p>
+                <p>We want this to be the local spot for all cyclists.</p>
+                <p>We would love to help you discover new roads around our beautiful county.</p>
+                <p>We take pride in our cycling, and we want you to feel the same way!</p>
         </div>
     </div>
 
