--- a/event-calender.html
+++ b/event-calender.html
@@ -30,20 +30,24 @@
 
 <div class="row">
         <div class="column">    
-            <h1>Join one of our events this year:</h1>
-            <br>
-            <h2>We have events for both gravel and road, check them out!</h2>
+            <h1>Ride with us</h1>
+            <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling together.</p>
+            <p>Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.</p>
+            <p>On thursdays we go for the gravels together, one week focus technique and the next distance</p>
+            <p>On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
+            <img src="./assets/images/road-cycling-group.jpg" alt="image-of-cyclist" class="group-cycling">
         </div>
         <div class="column">    
+            <h1>Events</h1>
             <h2>Road</h2>
-            <p>July 16th</p>
-            <p>August 22nd</p>
-            <p>September 10th</p>
+            <p>July 16th, meeting point Hyllie Arena</p>
+            <p>August 22nd, meeting point Malmö Cycling Café/p>
+            <p>September 10th meeting point Malmö Cycling Café</p>
             <h2>Gravel</h2>
-            <p>July 2nd</p>
-            <p>August 13th</p>
-            <p>September 17th</p>
-            <p>October 8th</p>
+            <p>July 2nd, meeting point Regnbågsbanan, Malmö</p>
+            <p>August 13th, meeting point Regnbågsbanan, Malmö</p>
+            <p>September 17th, meeting point Regnbågsbanan, Malmö</p>
+            <p>October 8th, meeting point, Regnbågsbanan, Malmö</p>
         </div>
 </div>
     
