--- a/event-calender.html
+++ b/event-calender.html
@@ -33,7 +33,7 @@
             <h1>Ride with us</h1>
             <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling together.</p>
             <p>Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.</p>
-            <p>On thursdays we go for the gravels together, one week focus technique and the next distance</p>
+            <p>On thursdays we go for the gravels together, one week focus technique and the next distance.</p>
             <p>On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
             <img src="./assets/images/road-cycling-group.jpg" alt="image-of-cyclist" class="group-cycling">
         </div>
@@ -41,7 +41,7 @@
             <h1>Events</h1>
             <h2>Road</h2>
             <p>July 16th, meeting point Hyllie Arena</p>
-            <p>August 22nd, meeting point Malmö Cycling Café/p>
+            <p>August 22nd, meeting point Malmö Cycling Café</p>
             <p>September 10th meeting point Malmö Cycling Café</p>
             <h2>Gravel</h2>
             <p>July 2nd, meeting point Regnbågsbanan, Malmö</p>
