--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <header class="header">
-            <a href="index.html" class="logo">Malmö Cycling club</a>
+            <a href="index.html"><img class="logo" src="./assets/images/logo.svg"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
@@ -28,34 +28,27 @@
         <div class="overlay">
             <h1 class="welcome">Welcome to our cycling club</h1>
         </div>
-
     </section>
-
+    <div class="container">
 
     <div class="row">
         <div class="column">  
             <h1>Cycling</h1>  
-            <p>Cycling is the best we know!</p>
-            <p>Cycling creates meetings - and friends for life. It gives you energyand happiness.</p>
-            <p>Cycling saves a bad day and makes a good day even better.</p>
-            <p>Ride as much or as little, as long or as short as you feel, but ride!</p>
+            <p>Cycling is the best we know! Cycling creates meetings - and friends for life. It gives you energyand happiness. Cycling saves a bad day and makes a good day even better. Ride as much or as little, as long or as short as you feel, but ride!</p>
         </div>
         <div class="column">
                 <h1>This is us</h1>
-                <p>We are bike enthusiasts for both roadcycling and gravel.</p>
-                <p>We want this to be the local spot for all cyclists.</p>
-                <p>We would love to help you discover new roads around our beautiful county.</p>
-                <p>We take pride in our cycling, and we want you to feel the same way!</p>
+                <p>We are bike enthusiasts for both roadcycling and gravel. We want this to be the local spot for all cyclists. We would love to help you discover new roads around our beautiful county. We take pride in our cycling, and we want you to feel the same way!</p>
         </div>
     </div>
-
+    </div>
 <footer>
         <a href="https://facebook.com" target="_blank" rel="noopener" aria-label="Visit our Facebook page (opens in a new tab)"><i class="fa-brands fa-facebook"></i></a>
         <a href="https://twitter.com" target="_blank" rel="noopener" aria-label="Visit our Twitter page (opens in a new tab)"><i class="fa-brands fa-twitter"></i></a>
         <a href="https://youtube.com" target="_blank" rel="noopener" aria-label="Visit our Youtube page (opens in a new tab)"><i class="fa-brands fa-youtube"></i></a>
         <a href="https://instagram.com" target="_blank" rel="noopener" aria-label="Visit our Instagram page (opens in a new tab)"><i class="fa-brands fa-instagram"></i></a>
-        <p id="social-text">Check out our social medias!</p>
-        <h6 class="m-0 mt-4 text-center text-white text-capitalize">Copyright &copy; 2022 Designed by Jessica Fransson</h6>
+        <p class="social-text">Check out our social medias!</p>
+        <h6>Copyright &copy; 2022 Designed by Jessica Fransson</h6>
 </footer>
 
     <!--font awesome script-->    
