changed photo in contact page and paragraphs

--- a/cafe.html
+++ b/cafe.html
@@ -30,10 +30,10 @@
 
 <div class="row">
         <div class="column">    
-            <h2>Most things begins and ends with coffee, so does cycling</h2>
-            <p>Come on in for a nice cup of coffee before or after your ride.</p>
-            <p>We also serve pastries from the bakery down the road</p>
-            <p>So pop by before or after your ride for a lovely treat!</p>
+            <p>Most things begins and ends with coffee, so does cycling
+            Come on in for a nice cup of coffee before or after your ride.
+            We also serve pastries from the bakery down the road
+            So pop by before or after your ride for a lovely treat!</p>
             <img src="./assets/images/latte.jpg" alt="image-of-coffee" class="latte">
         </div>
         <div class="column">
