--- a/event-calender.html
+++ b/event-calender.html
@@ -31,10 +31,10 @@
 <div class="row">
         <div class="column">    
             <h1>Ride with us</h1>
-            <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling together.</p>
-            <p>Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.</p>
-            <p>On thursdays we go for the gravels together, one week focus technique and the next distance.</p>
-            <p>On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
+            <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling together.
+            Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
+            On thursdays we go for the gravels together, one week focus technique and the next distance.
+            On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
             <img src="./assets/images/road-cycling-group.jpg" alt="image-of-cyclist" class="group-cycling">
         </div>
         <div class="column">    
