--- a/contact.html
+++ b/contact.html
@@ -32,10 +32,10 @@
 <div class="row">
         <div class="column">    
             <h2>We would love to hear from you</h2>
-            <p>Let us know what you're missing</p>
-            <p>Or if there's anything we can do better</p>
-            <p>Lets make the cycling in Skåne even better, together!</p>
-            <p>Use our social media tags and join our community:
+            <p>Let us know what you're missing
+            Or if there's anything we can do better
+            Lets make the cycling in Skåne even better, together!
+            Use our social media tags and join our community:
                 #malmocyclingclub
                 #roadcycling
                 #gravelridesmalmo
