added photos and replaced photos

--- a/cafe.html
+++ b/cafe.html
@@ -35,6 +35,7 @@
             We also serve pastries from the bakery down the road
             So pop by before or after your ride for a lovely treat!</p>
             <img src="./assets/images/latte.jpg" alt="image-of-coffee" class="latte">
+            <img src="./assets/images/making-espresso.jpg" alt="image-of-espresso" class="espresso">
         </div>
         <div class="column">
                 <h2>We're open for you:</h2>
