--- a/event-calender.html
+++ b/event-calender.html
@@ -35,7 +35,8 @@
             Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
             On thursdays we go for the gravels together, one week focus technique and the next distance.
             On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
-            <img src="./assets/images/road-cycling-group.jpg" alt="image-of-cyclist" class="group-cycling">
+            <img src="./assets/images/female-cyclists.jpg" id="image-of-female-cyclists" class="female">
+            <img src="./assets/images/backwheel.jpg" id="image-of-backwheel" class="backwheel">
         </div>
         <div class="column">    
             <h1>Events</h1>
