cleaning up html pages

--- a/contact.html
+++ b/contact.html
@@ -38,9 +38,7 @@
             Use our social media tags and join our community:
                 #malmocyclingclub
                 #roadcycling
-                #gravelridesmalmo
-            </p>
-    
+                #gravelridesmalmo</p>
         </div>
 
         <div class="column">
