--- a/event-calender.html
+++ b/event-calender.html
@@ -41,14 +41,21 @@
         <div class="column">    
             <h1>Events</h1>
             <h2>Road</h2>
-            <p>July 16th, meeting point Hyllie Arena</p>
-            <p>August 22nd, meeting point Malmö Cycling Café</p>
-            <p>September 10th meeting point Malmö Cycling Café</p>
+            <p>July 16th, meeting point Hyllie Arena
+                <br>
+            August 22nd, meeting point Malmö Cycling Café
+                <br>
+            September 10th meeting point Malmö Cycling Café
+            </p>
             <h2>Gravel</h2>
-            <p>July 2nd, meeting point Regnbågsbanan, Malmö</p>
-            <p>August 13th, meeting point Regnbågsbanan, Malmö</p>
-            <p>September 17th, meeting point Regnbågsbanan, Malmö</p>
-            <p>October 8th, meeting point, Regnbågsbanan, Malmö</p>
+            <p>July 2nd, meeting point Regnbågsbanan, Malmö
+                <br>
+            August 13th, meeting point Regnbågsbanan, Malmö
+                <br>
+            September 17th, meeting point Regnbågsbanan, Malmö
+                <br>
+            October 8th, meeting point, Regnbågsbanan, Malmö
+            </p>
         </div>
 </div>
     
