added container to all pages

--- a/contact.html
+++ b/contact.html
@@ -28,8 +28,8 @@
         </div>
     </section>
 
-
-<div class="row">
+<div class="container">
+    <div class="row">
         <div class="column">    
             <h2>We would love to hear from you</h2>
             <p>Let us know what you're missing
@@ -60,6 +60,7 @@
             <input type="submit" value="Submit">
           </form>
         </div>
+    </div>
 </div>
 
          
