--- a/cafe.html
+++ b/cafe.html
@@ -28,7 +28,8 @@
             </div>
         </section>
 
-<div class="row">
+    <div class="container">
+        <div class="row">
         <div class="column">    
             <p>Most things begins and ends with coffee, so does cycling
             Come on in for a nice cup of coffee before or after your ride.
@@ -55,6 +56,7 @@
                 <li>Lemonade €2.5</li>
                 </ul>
         </div>
+    </div>
 </div>
 
 
