--- a/event-calender.html
+++ b/event-calender.html
@@ -28,7 +28,8 @@
         </div>
     </section>
 
-<div class="row">
+<div class="container">
+    <div class="row">
         <div class="column">    
             <h1>Ride with us</h1>
             <p>We find cycling with friends to be very enjoyable, therefor we have 3 days a week where we go cycling together.
@@ -57,6 +58,7 @@
             October 8th, meeting point, Regnbågsbanan, Malmö
             </p>
         </div>
+    </div>
 </div>
     
 <footer>
