added photos to event page

--- a/cafe.html
+++ b/cafe.html
@@ -35,8 +35,8 @@
             Come on in for a nice cup of coffee before or after your ride.
             We also serve pastries from the bakery down the road
             So pop by before or after your ride for a lovely treat!</p>
-            <img src="./assets/images/latte.jpg" alt="image-of-coffee" class="latte">
-            <img src="./assets/images/making-espresso.jpg" alt="image-of-espresso" class="espresso">
+            <img src="./assets/images/latte.jpg" alt="image of a coffee cup" class="latte">
+            <img src="./assets/images/making-espresso.jpg" alt="image of espressos being made" class="espresso">
         </div>
         <div class="column">
                 <h2>We're open for you:</h2>
@@ -55,6 +55,7 @@
                 <li>Caffe Latte €4</li>
                 <li>Lemonade €2.5</li>
                 </ul>
+            <img src="./assets/images/latte-art.jpg" alt="man making a latte" class="barista">
         </div>
     </div>
 </div>
