--- a/event-calender.html
+++ b/event-calender.html
@@ -36,8 +36,8 @@
             Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
             On thursdays we go for the gravels together, one week focus technique and the next distance.
             On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
-            <img src="./assets/images/female-cyclists.jpg" id="image-of-female-cyclists" class="female">
-            <img src="./assets/images/backwheel.jpg" id="image-of-backwheel" class="backwheel">
+            <img src="./assets/images/female-cyclists.jpg" alt="image of female cylists" class="female">
+            <img src="./assets/images/backwheel.jpg" alt="image of a backwheel and cyclists leg" class="backwheel">
         </div>
         <div class="column">    
             <h1>Events</h1>
@@ -57,6 +57,7 @@
                 <br>
             October 8th, meeting point, Regnbågsbanan, Malmö
             </p>
+            <img src="./assets/images/event-race.jpg" alt="group of cyclists racing" class="race">
         </div>
     </div>
 </div>
