added photos to startpage

--- a/index.html
+++ b/index.html
@@ -35,10 +35,12 @@
         <div class="column">  
             <h1>Cycling</h1>  
             <p>Cycling is the best we know! Cycling creates meetings - and friends for life. It gives you energyand happiness. Cycling saves a bad day and makes a good day even better. Ride as much or as little, as long or as short as you feel, but ride!</p>
+            <img src="./assets/images/roadcycling.jpg" alt="roads for cycling roadbikes" class="roadcycling">
         </div>
         <div class="column">
                 <h1>This is us</h1>
                 <p>We are bike enthusiasts for both roadcycling and gravel. We want this to be the local spot for all cyclists. We would love to help you discover new roads around our beautiful county. We take pride in our cycling, and we want you to feel the same way!</p>
+                <img src="./assets/images/roadies.jpg" alt="roadcyclists from behind" class="roadies">
         </div>
         </div>
     </div>
