fixed list for cafe page

--- a/contact.html
+++ b/contact.html
@@ -39,7 +39,7 @@
                 #malmocyclingclub
                 #roadcycling
                 #gravelridesmalmo</p>
-            <img src="./assets/images/bikes-in-landscape.jpg" alt="photo of bikes in open landscape" class="landscape">
+            <img src="./assets/images/bikes-in-landscape.jpg" alt="photo of bikes in open landscape">
         </div>
 
         <div class="column">
