--- a/event-calender.html
+++ b/event-calender.html
@@ -36,27 +36,23 @@
             Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
             On thursdays we go for the gravels together, one week focus technique and the next distance.
             On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
-            <img src="./assets/images/female-cyclists.jpg" alt="image of female cylists" class="female">
-            <img src="./assets/images/backwheel.jpg" alt="image of a backwheel and cyclists leg" class="backwheel">
+            <img src="./assets/images/female-cyclists.jpg" alt="image of female cylists">
         </div>
         <div class="column">    
             <h1>Events</h1>
             <h2>Road</h2>
-            <p>July 16th, meeting point Hyllie Arena
-                <br>
-            August 22nd, meeting point Malmö Cycling Café
-                <br>
-            September 10th meeting point Malmö Cycling Café
-            </p>
+            <ul class="events">
+                <li>July 16th, meeting point Hyllie Arena</li>
+                <li>August 22nd, meeting point Malmö Cycling Café</li>
+                <li>September 10th meeting point Malmö Cycling Café</li>
+            </ul>
             <h2>Gravel</h2>
-            <p>July 2nd, meeting point Regnbågsbanan, Malmö
-                <br>
-            August 13th, meeting point Regnbågsbanan, Malmö
-                <br>
-            September 17th, meeting point Regnbågsbanan, Malmö
-                <br>
-            October 8th, meeting point, Regnbågsbanan, Malmö
-            </p>
+            <ul class="events">
+                <li>July 2nd, meeting point Regnbågsbanan, Malmö</li>
+                <li>August 13th, meeting point Regnbågsbanan, Malmö</li>
+                <li>September 17th, meeting point Regnbågsbanan, Malmö</li>
+                <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
+        </ul>
             <img src="./assets/images/event-race.jpg" alt="group of cyclists racing" class="race">
         </div>
     </div>
