--- a/cafe.html
+++ b/cafe.html
@@ -35,18 +35,16 @@
             Come on in for a nice cup of coffee before or after your ride.
             We also serve pastries from the bakery down the road
             So pop by before or after your ride for a lovely treat!</p>
-            <img src="./assets/images/latte.jpg" alt="image of a coffee cup" class="latte">
-            <img src="./assets/images/making-espresso.jpg" alt="image of espressos being made" class="espresso">
+            <img src="./assets/images/latte-art.jpg" alt="man making a latte" class="barista">
         </div>
         <div class="column">
                 <h2>We're open for you:</h2>
-                <ul>
+                <ul class="cafe">
                 <li>Monday-Friday 09:00-16:00</li>
                 <li>Saturday-Sunday 11:00-15:00</li>
-                <br>
                 </ul>
                 <h2>Menu:</h2>
-                <ul>
+                <ul class="cafe">
                 <li>Espresso €3</li>
                 <li>Macchiato €3.5</li>
                 <li>Cortado €3.5</li>
@@ -55,7 +53,7 @@
                 <li>Caffe Latte €4</li>
                 <li>Lemonade €2.5</li>
                 </ul>
-            <img src="./assets/images/latte-art.jpg" alt="man making a latte" class="barista">
+                <img src="./assets/images/making-espresso.jpg" alt="image of espressos being made">
         </div>
     </div>
 </div>
