added style to contact page

--- a/cafe.html
+++ b/cafe.html
@@ -31,10 +31,10 @@
     <div class="container">
         <div class="row">
         <div class="column">    
-            <p>Most things begins and ends with coffee, so does cycling
-            Come on in for a nice cup of coffee before or after your ride.
-            We also serve pastries from the bakery down the road
-            So pop by before or after your ride for a lovely treat!</p>
+            <p>Most things begins and ends with coffee, so does cycling.
+            Come on in for a nice cup of coffee before or after your ride,
+            we also serve pastries from the bakery down the road.
+            Pop by before or after your ride for a lovely treat!</p>
             <img src="./assets/images/latte-art.jpg" alt="man making a latte" class="barista">
         </div>
         <div class="column">
