--- a/contact.html
+++ b/contact.html
@@ -33,17 +33,20 @@
         <div class="column">    
             <h2>We would love to hear from you</h2>
             <p>Let us know what you're missing
-            Or if there's anything we can do better
+            Or if there's anything we can do better.
             Lets make the cycling in Skåne even better, together!
             Use our social media tags and join our community:
-                #malmocyclingclub
-                #roadcycling
-                #gravelridesmalmo</p>
+            <ul class="contact">
+                <li>#malmocyclingclub</li>
+                <li>#roadcycling</li>
+                <li>#gravelridesmalmo</li>
+            </p>
+            </ul>
             <img src="./assets/images/bikes-in-landscape.jpg" alt="photo of bikes in open landscape">
         </div>
 
         <div class="column">
-            <h1>Sign up here to subscrib to our newsletter:</h1>
+            <h1>Sign up here to subscribe to our newsletter:</h1>
             <form action="action_page.php">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
