--- a/contact.html
+++ b/contact.html
@@ -46,7 +46,7 @@
         </div>
 
         <div class="column">
-            <h1>Sign up here to subscribe to our newsletter:</h1>
+            <h2>Get the latest on news and events:</h2>
             <form action="action_page.php">
             <label for="fname">First Name</label>
             <input type="text" id="fname" name="firstname" placeholder="Your name..">
@@ -61,7 +61,7 @@
         
             <label for="subject">Leave us a message</label>
             <textarea id="subject" name="subject" placeholder="Whats on your mind.." style="height:200px"></textarea>
-            <input type="submit" value="Submit">
+            <input type="submit" value="Subscribe">
           </form>
         </div>
     </div>
