added alt to images

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <body>
     
     <header class="header">
-            <a href="index.html"><img class="logo" src="./assets/images/logo.svg"></a>
+            <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="logo pf malmö cycling club"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
