--- a/event-calender.html
+++ b/event-calender.html
@@ -13,7 +13,7 @@
 
 <body>
         <header class="header">
-            <a href="index.html"><img class="logo" src="./assets/images/logo.svg"></a>
+            <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="image of malmö cycling club logo"></a>
             <nav>
                 <a href="index.html">Home</a>
                 <a href="cafe.html">Cafe</a>
