--- a/contact.html
+++ b/contact.html
@@ -35,12 +35,11 @@
             <p>Let us know what you're missing
             Or if there's anything we can do better.
             Lets make the cycling in Skåne even better, together!
-            Use our social media tags and join our community:
+            Use our social media tags and join our community:</p>
             <ul class="contact">
                 <li>#malmocyclingclub</li>
                 <li>#roadcycling</li>
                 <li>#gravelridesmalmo</li>
-            </p>
             </ul>
             <img src="./assets/images/bikes-in-landscape.jpg" alt="photo of bikes in open landscape">
         </div>
