--- a/cafe.html
+++ b/cafe.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Cafe</title>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>  
         <header class="header">
