--- a/contact.html
+++ b/contact.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Contact</title>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>
 
