--- a/event-calender.html
+++ b/event-calender.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Calendar</title>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
 </head>
 
 <body>
