--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="assets/css/style.css">
 
     <title>Malmö Cycling Club</title>
+    <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
 </head>
 
 <body>
