styled header and menu for mobile

--- a/contact.html
+++ b/contact.html
@@ -13,7 +13,7 @@
 </head>
 <body>
 
-    <header class="header">
+    <header>
         <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="image of malmö cycling club logo"></a>
             <nav>
                 <a href="index.html">Home</a>
