--- a/cafe.html
+++ b/cafe.html
@@ -13,7 +13,7 @@
     <link href="./assets/images/favicon.icobike.ico" rel="icon" type="image/x-icon"/>
 </head>
 <body>  
-        <header class="header">
+        <header>
             <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="image of malmö cycling club logo"></a>
             <nav>
                 <a href="index.html">Home</a>
