--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 <body>
     
-    <header class="header">
+    <header>
             <a href="index.html"><img class="logo" src="./assets/images/logo.svg" alt="logo pf malmö cycling club"></a>
             <nav>
                 <a href="index.html">Home</a>
@@ -22,6 +22,7 @@
                 <a href="event-calender.html">Events</a>
                 <a href="contact.html">Contact</a>
             </nav>
+
     </header>
     
 
