--- a/contact.html
+++ b/contact.html
@@ -48,10 +48,10 @@
         <div class="column">
             <h2>Get the latest on news and events:</h2>
             <form action="action_page.php">
-            <label for="fname">First Name</label>
-            <input type="text" id="fname" name="firstname" placeholder="Your name..">
-            <label for="lname">Last Name</label>
-            <input type="text" id="lname" name="lastname" placeholder="Your last name..">
+            <label for="name">Name</label>
+            <input type="text" id="name" name="name" placeholder="Your name..">
+            <label for="email">Email Adress</label>
+            <input type="text" id="email" name="email" placeholder="Your email adress..">
             <label for="type">Type of cycling</label>
             <select id="type" name="type">
               <option value="road">Road</option>
