--- a/event-calender.html
+++ b/event-calender.html
@@ -37,7 +37,7 @@
             Join us on tuesdays for a mutual Road ride, the distance varies - but its always a social event.
             On thursdays we go for the gravels together, one week focus technique and the next distance.
             On saturdays we do a long ride on our road bikes, always with a coffee stop along the way.</p>
-            <img src="./assets/images/female-cyclists.jpg" alt="image of female cylists">
+            <img src="./assets/images/female-cyclists1.jpeg" alt="image of female cylists">
         </div>
         <div class="column">    
             <h2>Events</h2>
@@ -54,7 +54,7 @@
                 <li>September 17th, meeting point Regnbågsbanan, Malmö</li>
                 <li>October 8th, meeting point, Regnbågsbanan, Malmö</li>
         </ul>
-            <img src="./assets/images/event-race.jpg" alt="group of cyclists racing" class="race">
+            <img src="./assets/images/event-race2.jpg" alt="group of cyclists racing" class="race">
         </div>
     </div>
 </div>
